Update SquiggleCop baselines

--- a/tests/Moq.Analyzers.Test.Analyzers/SquiggleCop.Baseline.yaml
+++ b/tests/Moq.Analyzers.Test.Analyzers/SquiggleCop.Baseline.yaml
@@ -662,7 +662,7 @@
 - {Id: RCS1033, Title: Remove redundant boolean literal, Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: true, EffectiveSeverities: [Note], IsEverSuppressed: false}
 - {Id: RCS1034, Title: Remove redundant 'sealed' modifier, Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: true, EffectiveSeverities: [Note], IsEverSuppressed: true}
 - {Id: RCS1035, Title: '[deprecated] Remove redundant comma in initializer', Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: false, EffectiveSeverities: [None], IsEverSuppressed: true}
-- {Id: RCS1036, Title: Remove unnecessary blank line, Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: true, EffectiveSeverities: [Note], IsEverSuppressed: false}
+- {Id: RCS1036, Title: '[deprecated] Remove unnecessary blank line', Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: true, EffectiveSeverities: [Note], IsEverSuppressed: false}
 - {Id: RCS1037, Title: Remove trailing white-space, Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: true, EffectiveSeverities: [Note], IsEverSuppressed: false}
 - {Id: RCS1038, Title: '[deprecated] Remove empty statement', Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: false, EffectiveSeverities: [None], IsEverSuppressed: true}
 - {Id: RCS1039, Title: Remove argument list from attribute, Category: Roslynator, DefaultSeverity: Note, IsEnabledByDefault: true, EffectiveSeverities: [Note], IsEverSuppressed: true}
