--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -28,3 +28,6 @@ jobs:
 
       - name: Format restore
         run: dotnet format
+
+      - name: Workload update
+        run: dotnet workload update
