--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -15,6 +15,10 @@ jobs:
       actions: read
 
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # avoid shallow clone so nbgv can do its work
+        
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
