Enhance benchmarks and compilation setup by enabling implicit usings and nullable reference types in the project file. Refactor Moq1201AsyncResultBenchmarks to support multiple Moq versions and improve compilation handling with updated reference assemblies. Adjust CompilationCreator and BenchmarkCSharpCompilationFactory to accommodate new reference assembly logic.

--- a/tests/Moq.Analyzers.Benchmarks/Moq.Analyzers.Benchmarks.csproj
+++ b/tests/Moq.Analyzers.Benchmarks/Moq.Analyzers.Benchmarks.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -12,6 +14,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing" />
     <PackageReference Include="Microsoft.CodeAnalysis.AnalyzerUtilities" />
+    <ProjectReference Include="$(RepoRoot)/tests/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj" />
   </ItemGroup>
 
 </Project>
