Add project reference to Common.csproj in Moq.Analyzers and update InternalsVisibleTo settings in Common.csproj

--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -20,6 +20,9 @@
     <IsPackable>false</IsPackable>
     <IsPublishable>false</IsPublishable>
     <SquiggleCop_Enabled>false</SquiggleCop_Enabled>
+    <InternalsVisibleTo>Moq.Analyzers</InternalsVisibleTo>
+    <InternalsVisibleTo>Moq.Analyzers.Test</InternalsVisibleTo>
+    <InternalsVisibleTo>Moq.Analyzers.Test.Analyzers</InternalsVisibleTo>
   </PropertyGroup>
 
   <PropertyGroup Label="Shared project settings">
