--- a/src/Analyzers/Moq.Analyzers.csproj
+++ b/src/Analyzers/Moq.Analyzers.csproj
@@ -45,6 +45,7 @@
 
   <ItemGroup>
     <ProjectReference Include="$(RepoRoot)/src/CodeFixes/Moq.CodeFixes.csproj" />
+    <ProjectReference Include="$(RepoRoot)/src/Common/Common.csproj" />
   </ItemGroup>
 
 </Project>
