--- a/.github/actions/setup-restore-build/action.yml
+++ b/.github/actions/setup-restore-build/action.yml
@@ -1,5 +1,5 @@
-name: 'Common Steps'
-description: 'Shared steps for build and performance jobs'
+name: 'Setup, Restore, and Build Solution'
+description: 'Checks out code, sets up .NET, restores NuGet packages, and builds the solution for CI jobs.'
 runs:
   using: "composite"
   steps:
