Update workflows to include checkout and build steps
Add checkout step using actions/checkout@v4 with fetch-depth 0
to action.yml and main.yml. Introduce "Setup, Restore, and
Build Solution" step for consistent .NET build process across
jobs. Include performance validation step using PowerShell.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,10 @@ jobs:
       IS_QLTY_COVERAGE_ALLOWED: ${{ secrets.QLTY_COVERAGE_TOKEN != '' }}
 
     steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Setup, Restore, and Build Solution
       uses: ./.github/actions/setup-restore-build
 
@@ -115,6 +119,10 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Setup, Restore, and Build Solution
       uses: ./.github/actions/setup-restore-build
 
