ci: trigger perf job only on relevant file or dependency changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'build/scripts/perf/**'
+      - 'tests/Moq.Analyzers.Benchmarks/**'
+      - 'src/tools/PerfDiff/**'
+      - 'Directory.Packages.props'
+      - 'Directory.Build.props'
+      - 'global.json'
+      - '.github/workflows/main.yml'
   merge_group:
     branches:
       - main
