fix: rename performance files artifact for consistency

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,6 +167,6 @@ jobs:
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
-        name: Performance files (${{ matrix.os }})
+        name: performance-(${{ matrix.os }})
         path: |
           ./artifacts/performance/**
